...
  const { spacing, s } = useTheme();
  const { hasUnread, onPressNotifications } = props;

  const titleRow = (
    <View style={styles.titleRow}>
      <Text {...a11yHeader()} variant="screenTitle">
        Resumes
      </Text>
      <IconButton
        icon="bell"
        iconStyle="regular"
        iconSize={s(18)}
        label={hasUnread ? 'Notifications, unread' : 'Notifications'}
...
