...
      >
        {onBack ? (
          <IconButton
            icon="chevron-left"
            iconSize={s(14)}
            iconColor="textPrimary"
            label="Back"
            size={s(BACK_BUTTON)}
            variant="filled"
            onPress={onBack}
          />
        ) : null}
        <Text accessibilityRole="header" variant="headline">
...
